objects/Product_Author__c.object
<CustomObject>
    <description>Created for the purpose of saving Author details of book/products.</description>
    <fields>
        <fullName>Author_Biography__c</fullName>
        <description>Holds the Biography of an Author.</description>
        <label>Author Biography</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Author_ID__c</fullName>
        <description>Hold Author unique ID value from CPC</description>
        <label>Author ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <description>Field isused to store EPM data</description>
        <label>Biography</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Credentials</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Used to store EPM data</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as Part of DPS-22587</description>
        <label>Product Author-Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Author</relationshipLabel>
        <relationshipName>Product_Authors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Field stores the EPM data value</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Suffix__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Name Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Office Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Location__c</fullName>
        <description>Field is used to EPM data</description>
        <label>Photo Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Author_ID__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Source System Author ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <label>Product Author</label>
    <nameField>
        <label>Author Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Authors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>